# commure-assignment-chess

./: .gitignore  README.md  pyproject.toml  rating_history_50_players_30_days.csv  requirements.txt
commure_assignment_chess/: main.py
commure_assignment_chess/common/file_handler/: file_handler.py
commure_assignment_chess/lichess/: __init__.py  lichess.py
commure_assignment_chess/lichess/tests/: test_lichess.py
commure_assignment_chess/lichess/tests/output/: test_get_one_leaderboard.json  test_get_rating_history_of_a_user.json
