[tool.poetry]
name = "commure-assignment-chess"
version = "0.1.0"
description = ""
authors = ["falamarcao <falamarcao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
