[tool.poetry]
name = "commure-assignment-chess"
version = "0.1.0"
description = ""
authors = ["falamarcao <falamarcao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.2"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
